# target-clickhouse

./: .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci_workflow.yml
target_clickhouse/: connectors.py  sinks.py
tests/: conftest.py  target_test_cases.py  test_core.py
tests/target_test_streams/: stream_map_config.singer
